# rubiks_cube_algorithm

./: .gitignore  README.md
4StageAlg/: main.cpp  stage1.cu  stage2.cu  stage3.cu  stage4.cu
4StageAlgV2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rubiks
4StageAlgV2/include/: cube_defs.cuh  cube_defs.h  solver_kernel.cuh  solver_kernel.h
4StageAlgV2/src/: main.cpp  solvers.cu
Algorithm_v1/: Makefile  main.cpp  stage4.cu
Algorithm_v2/: CMakeLists.txt  build.sh
Algorithm_v2/include/: common.h  cube_defs.cuh  solver_kernel.cuh
Algorithm_v2/src/: solvers.cu
SpeedTest/: CpuSpeedTest_1  CpuSpeedTest_1.cpp  CpuSpeedTest_2  CpuSpeedTest_2.cpp  GpuSpeedTest  GpuSpeedTest.cu  GpuSpeedTest_1.cu  GpuSpeedTest_2.cu  Makefile
